--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <img src="logo.png" alt="logo" class="logo" />
+      <p class="header-text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
+        provident eos voluptates dolor odit labore inventore autem quia quod,
+        dolorum totam quae, maxime doloremque at. At nisi molestias earum
+        aperiam?
+      </p>
+    </header>
     <h1>Naše nabídka</h1>
     <p>
       Vybraná jídla z našeho jarního menu přepravená našimi prvotřídními
