--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   </head>
   <body>
     <header>
-      <img src="logo.png" alt="logo" class="logo" />
-      <p class="header-text">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
-        provident eos voluptates dolor odit labore inventore autem quia quod,
-        dolorum totam quae, maxime doloremque at. At nisi molestias earum
-        aperiam?
-      </p>
+      <div class="container">
+        <img src="logo.png" alt="logo" class="logo" />
+        <p class="header-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
+          provident eos voluptates dolor odit labore inventore autem quia quod,
+          dolorum totam quae, maxime doloremque at. At nisi molestias earum
+          aperiam?
+        </p>
+      </div>
     </header>
     <h1>Naše nabídka</h1>
     <p>
